Dev/src/FinancialForce Reporting/objects/ReportingLog__c.object
<CustomObject>
    <customHelpPage>helpreportinglog</customHelpPage>
    <fields>
        <fullName>ReportingDefinition__c</fullName>
        <label>Reporting Definition</label>
        <referenceTo>ReportingDefinition__c</referenceTo>
        <relationshipLabel>Reporting Logs</relationshipLabel>
        <relationshipName>ReportingLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Reporting Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reporting Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>